2025-02-24@21:03 - Fixed table layout issues on mobile in MarkdownLayout. - Added word breaking to body in global.css to break long words in content and headings.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-	@apply font-body bg-base-100 text-primary;
+	@apply font-body bg-base-100 text-primary break-words;
 }
 
 h1 {
